# aibond-agent

./: .gitignore  AGENT_CONNECTION_GUIDE.md  AGENT_ONBOARDING_INSTRUCTION.md  AGENT_PROMPT.md  AGENT_TEST_GUIDE.md  THREE_WAY_REVIEW.md  pyproject.toml
aibond-agent/: .mcp.json  CLAUDE.md  README.md  pyproject.toml  setup.py
aibond-agent/.claude/skills/aibond-connector/: SKILL.md
aibond-agent/aibond_agent/: agent_runtime.py  client.py  mcp_http.py  mcp_server.py
aibond-agent/tests/: test_agent_runtime.py  test_bugs.py  test_cli.py  test_client.py  test_mcp_server.py
aibond_agent/: __init__.py  agent_runtime.py  client.py  mcp_server.py
aibond_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
backend/: .env.example  requirements.txt
backend/app/: config.py  database.py  main.py  security.py
backend/app/models/: models.py
backend/app/routers/: agents.py  auth.py  files.py  groups.py  messages.py  offline.py  sessions.py  workflows.py
backend/app/tunnel/: __init__.py  manager.py
backend/app/websocket/: agent_handler.py  manager.py
backend/app/workflows/: engine.py
docs/: DEPLOYMENT_PLAN.md  agent-connection-design.md  aibond-platform-design.md  design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: MainLayout.tsx
frontend/src/pages/: Agents.tsx  Chat.tsx  Groups.tsx  Login.tsx  Workflow.tsx  WorkflowEditor.tsx
frontend/src/store/: authStore.ts  chatStore.ts
tests/: test_platform.py
