[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibond-agent"
version = "0.1.0"
description = "Aibond Agent SDK - Connect agents to Aibond server via WebSocket and MCP"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
aibond-agent = "aibond_agent.cli:main"

[tool.setuptools.packages.find]
include = ["aibond_agent*"]
