[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aibond-agent"
version = "0.3.0"
description = "Aibond Agent SDK - MCP Server for the aibond human-agent collaboration platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
# CLI entry point: aibond-agent connect --server ... --token ...
aibond-agent = "aibond_agent.cli:main"
# MCP Server entry point: used by Claude Code / Trae via stdio
aibond-mcp = "aibond_agent.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["aibond_agent"]
