[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aibond-agent"
version = "0.4.0"
description = "Aibond Agent SDK - MCP Server for the aibond human-agent collaboration platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-playwright>=0.8",
]
http = [
    "aiohttp>=3.9",
]

[project.scripts]
# CLI entry point: aibond-agent connect --server ... --token ...
aibond-agent = "aibond_agent.cli:main"
# MCP Server stdio mode: used by TRAE / Claude Code via stdio
aibond-mcp = "aibond_agent.mcp_server:main"
# MCP Server HTTP mode: used for remote deployment
aibond-mcp-http = "aibond_agent.mcp_http:main"

[tool.hatch.build.targets.wheel]
packages = ["aibond_agent"]
